--- a/client/index.html
+++ b/client/index.html
@@ -10,11 +10,11 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvP71A4zQ3bBjri75-1y6AaLP3s-JfNO0&libraries=places"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <script src="lib/angular/angular.js"></script>
-    <script src="lib/jquery/jquery.js"></script>
-
+<!--     <script src="lib/jquery/src/jquery.js"></script>
+ -->
     <script src="app/homescreen/homescreen.js"></script>
-    <script src="app.js"></script>
-    <script src='maps_api.js'></script>
+    <script src="app/app.js"></script>
+    <script src='assets/maps_api.js'></script>
   </head>
   <body ng-controller="mainController">
     <h1> {{test}} </h1>
@@ -23,7 +23,7 @@
         <div id="popup">
           <div id="searchBox">
             <label>Search For Park By Location or Name</label>
-            <input id="location" type="text" name="searchText"  ng-model="searchCriteria" placeholder="ex: San Francisco, CA or Yosemite">
+            <input id="location" type="text" name="searchText"   placeholder="ex: San Francisco, CA or Yosemite">
             <button id="searchButton" ng-click="submitSearch()">Search</button>
           </div>
         </div>
@@ -37,7 +37,7 @@
                   <p>{{searchText}}</p>
                 </div>
                 <div id="filterContent" >
-                  <ul ng-repeat="loc as locations"> <!-- sort by distance then rating-->
+                  <ul ngrepeat="loc as locations"> <!-- sort by distance then rating-->
                     <li>
                       <div>{{loc.name}}</div>
                       <div>{{loc.address}}</div>
