--- a/client/index.html
+++ b/client/index.html
@@ -10,20 +10,18 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvP71A4zQ3bBjri75-1y6AaLP3s-JfNO0&libraries=places"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/style.css"/>
     <script src="lib/angular/angular.js"></script>
+
 <!--     <script src="lib/jquery/src/jquery.js"></script>
  -->
- <script src="app/app.js"></script>
+    <script src="app/app.js"></script>
     <script src="app/homescreen/homescreen.js"></script>
     
     <script src='app/filter/filter.js'></script>
     <script src='app/description/description.js'></script>
-	<script src="app/services/services.js"></script>
-<script src="assets/park_category.js"></script>
-<!--     <script src='assets/maps_api.js'></script>
- 
- -->     
+	   <script src="app/services/services.js"></script>
+    <script src="assets/park_category.js"></script>
+    <script src="app/weather/weather.js"></script>
     <script src="app/toggleNavbar/toggleNavbar.js"></script>
-
  
   </head>
   <body>
@@ -66,7 +64,7 @@
               <div id="descriptionContainer" ng-controller="descriptionController">
                 <p>Description</p>
                 <div id="descriptionContent">{{description}}</div>
-              </div>
+            </div>
               <div id="tabContainer" ng-controller="toggleNavbarController">
                 <div id="navbar">
                   <ul id="navbarUl">
@@ -77,7 +75,7 @@
                     <li class="navbarLi" ng-click="reset(); tab5 = !tab5">New Features2</li>
                   </ul>
                 </div>
-                <div id="featureContent1" ng-show="tab1">
+                <div id="weather" ng-controller="weatherController" ng-show="tab1">
                   <h3>Just a place holder for your awesome contents1</h3>
                 </div>
                 <div id="featureContent2" ng-show="tab2">
@@ -92,10 +90,10 @@
                 <div id="featureContent5" ng-show="tab5">
                   <h3>Just a place holder for your awesome contents5</h3> 
                 </div>
-              </div>
-            </span>
-          </div>
+            </div>
+          </span>
         </div>
+      </div>
     </div>
   </body>
 </html>
