(feat)add navbar to TAB div working on toggle

--- a/client/index.html
+++ b/client/index.html
@@ -64,7 +64,32 @@
                 <p>Description</p>
                 <div id="descriptionContent">{{description}}</div>
               </div>
-              <div id="tabContainer"> TABS</div>
+              <div id="tabContainer">
+                <div id="navbar">
+                  <ul id="navbarUl">
+                    <li class="navbarLi">Current Weathers</li>
+                    <li class="navbarLi">Forecast</li>
+                    <li class="navbarLi">Reviews</li>
+                    <li class="navbarLi">New Features1</li>
+                    <li class="navbarLi">New Features2</li>
+                  </ul>
+                </div>
+                <div id="featureContent1">
+                  <h3>Just a place holder for your awesome contents</h3>
+                </div>
+                <div id="featureContent1">
+                  <h3>Just a place holder for your awesome contents</h3>
+                </div>
+                <div id="featureContent1">
+                  <h3>Just a place holder for your awesome contents</h3> 
+                </div>
+                <div id="featureContent1">
+                  <h3>Just a place holder for your awesome contents</h3> 
+                </div>
+                <div id="featureContent1">
+                  <h3>Just a place holder for your awesome contents</h3> 
+                </div>
+              </div>
             </span>
           </div>
         </div>
