(file)finished description

--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,9 @@
     <script src="app/homescreen/homescreen.js"></script>
     
     <script src='app/filter/filter.js'></script>
+    <script src='app/description/description.js'></script>
 	<script src="app/services/services.js"></script>
-
+<script src="assets/park_category.js"></script>
 <!--     <script src='assets/maps_api.js'></script>
  -->    
     <script src="app/maps/maps.js"></script>
@@ -39,8 +40,8 @@
         <div ng-show="searchStatus" id="detailDisplay">
           <span id="logo"> LOGO </span>
           <div id="totalContainer">
-            <span id="filterMapContainer">
-              <div id="filterContainer" ng-controller="filterController"> <!--Removed Dash from NG_controller-->
+            <span id="filterMapContainer" ng-controller="filterController">
+              <div id="filterContainer" > <!--Removed Dash from NG_controller-->
                 <div id="filterTitle">
                   <p>{{searchText}}</p>
                 </div>
@@ -54,14 +55,14 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder" ng-controller="mapsController">
+              <div id="mapHolder" ngcontroller="mapsController">
                 <span id="mapButton" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
               </div>
             </span>
             <span id="totalDisplayContainer">
-              <div id="descriptionContainer">
+              <div id="descriptionContainer" ng-controller="descriptionController">
                 <p>Description</p>
                 <div id="descriptionContent">{{description}}</div>
               </div>
