--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 <!--     <script src='assets/maps_api.js'></script>
  -->    
     <script src="app/maps/maps.js"></script>
+    <script src="app/toggleNavbar/toggleNavbar.js"></script>
 
   </head>
   <body>
@@ -64,30 +65,30 @@
                 <p>Description</p>
                 <div id="descriptionContent">{{description}}</div>
               </div>
-              <div id="tabContainer">
+              <div id="tabContainer" ng-controller="toggleNavbarController">
                 <div id="navbar">
                   <ul id="navbarUl">
-                    <li class="navbarLi">Current Weathers</li>
-                    <li class="navbarLi">Forecast</li>
-                    <li class="navbarLi">Reviews</li>
-                    <li class="navbarLi">New Features1</li>
-                    <li class="navbarLi">New Features2</li>
+                    <li class="navbarLi" ng-click="tab1 = !tab1">Current Weathers</li>
+                    <li class="navbarLi" ng-click="tab2 = !tab2">Forecast</li>
+                    <li class="navbarLi" ng-click="tab3 = !tab3">Reviews</li>
+                    <li class="navbarLi" ng-click="tab4 = !tab4">New Features1</li>
+                    <li class="navbarLi" ng-click="tab5 = !tab5">New Features2</li>
                   </ul>
                 </div>
-                <div id="featureContent1">
-                  <h3>Just a place holder for your awesome contents</h3>
+                <div id="featureContent1" ng-show="tab1">
+                  <h3>Just a place holder for your awesome contents1</h3>
                 </div>
-                <div id="featureContent1">
-                  <h3>Just a place holder for your awesome contents</h3>
+                <div id="featureContent2" ng-show="tab2">
+                  <h3>Just a place holder for your awesome contents2</h3>
                 </div>
-                <div id="featureContent1">
-                  <h3>Just a place holder for your awesome contents</h3> 
+                <div id="featureContent3" ng-show="tab3">
+                  <h3>Just a place holder for your awesome contents3</h3> 
                 </div>
-                <div id="featureContent1">
-                  <h3>Just a place holder for your awesome contents</h3> 
+                <div id="featureContent4" ng-show="tab4">
+                  <h3>Just a place holder for your awesome contents4</h3> 
                 </div>
-                <div id="featureContent1">
-                  <h3>Just a place holder for your awesome contents</h3> 
+                <div id="featureContent5" ng-show="tab5">
+                  <h3>Just a place holder for your awesome contents5</h3> 
                 </div>
               </div>
             </span>
