(doc / move)shift weather html over to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -69,8 +69,8 @@
             <div id="tabContainer" ng-controller="toggleNavbarController">
               <div id="navbar">
                 <ul id="navbarUl">
-                  <li class="navbarLi" ng-click="tab1 = !tab1">Current Weathers</li>
-                  <li class="navbarLi" ng-click="tab2 = !tab2">Forecast</li>
+                  <li class="navbarLi" ng-click="tab1 = !tab1">Weather</li>
+                  <li class="navbarLi" ng-click="tab2 = !tab2">New Feature3</li>
                   <li class="navbarLi" ng-click="tab3 = !tab3">Reviews</li>
                   <li class="navbarLi" ng-click="tab4 = !tab4">New Features1</li>
                   <li class="navbarLi" ng-click="tab5 = !tab5">New Features2</li>
