(file)merging changes

--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder">
+              <div id="mapHolder" ngcontroller="mapsController">
                 <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
