--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
                 </div>
               </div>
               <div id="mapHolder" ngcontroller="mapsController">
-                <span id="mapButton" ng-click="toggleSize($event)">+</span>
+                <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
               </div>
