--- a/client/index.html
+++ b/client/index.html
@@ -66,7 +66,7 @@
                 <div id="descriptionContent">{{description}}</div>
 
             </div>
-            <div id="tabContainer" ng-controller="toggleNavbarController">
+            <div id="tabContainer" ng-controller="TabsCtrl">
               <div id="navbar">
                 <ul id="navbarUl">
                   <li class="navbarLi" ng-click="tab1 = !tab1">Weather</li>
