remove other weather references temporarily

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,6 @@
     <script src='app/description/description.js'></script>
 	   <script src="app/services/services.js"></script>
     <script src="assets/park_category.js"></script>
-    <script src="app/weather/weather.js"></script>
     <script src="app/toggleNavbar/toggleNavbar.js"></script>
  
   </head>
@@ -77,7 +76,7 @@
                 </ul>
               </div>
 
-              <div id="weather" ng-controller="weatherController" ng-show="tab1">
+              <div id="featureContent1" ng-show="tab1">
                 <h3>Just a place holder for your awesome contents1</h3>
               </div>
               <div id="featureContent2" ng-show="tab2" >
