--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder" ngcontroller="mapsController">
+              <div id="mapHolder">
                 <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
@@ -128,5 +128,4 @@
 
 });
 </script>
- 
 
