--- a/client/index.html
+++ b/client/index.html
@@ -54,7 +54,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder" ngcontroller="mapsController">
+              <div id="mapHolder">
                 <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
                 
@@ -116,3 +116,5 @@
     </div>
   </body>
 </html>
+
+ 
