--- a/client/index.html
+++ b/client/index.html
@@ -59,7 +59,7 @@
                   </ul>
                 </div>
               </div>
-              <div id="mapHolder" ngcontroller="mapsController">
+              <div id="mapHolder">
                 <span id="mapButton" class="mapButtonMini" ng-click="toggleSize($event)">+</span>
                 <div id="map" class="smallMap"></div>
               </div>
